@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false

skinparam class {
    BackgroundColor #F8FBFF
    BorderColor #1F5F99
    ArrowColor #1F5F99
}

title Observer Pattern - BlueWear Stock Alert System

class StockChangedEvent {
    + ProductId : int
    + ProductName : string
    + OldStock : int
    + NewStock : int
    + StockChangedEvent(productId : int, productName : string, oldStock : int, newStock : int)
}

class StockNotification {
    + CustomerName : string
    + Email : string
    + ProductName : string
    + Message : string
    + StockNotification(customerName : string, email : string, productName : string, message : string)
}

interface IStockObserver {
    + ProductId : int
    + CustomerName : string
    + Email : string
    + Update(stockEvent : StockChangedEvent) : StockNotification
}

class CustomerStockObserver {
    + ProductId : int
    + CustomerName : string
    + Email : string
    + CustomerStockObserver(productId : int, customerName : string, email : string)
    + Update(stockEvent : StockChangedEvent) : StockNotification
}

interface IStockSubject {
    + Attach(observer : IStockObserver) : void
    + Detach(email : string, productId : int) : void
    + Notify(stockEvent : StockChangedEvent) : List<StockNotification>
    + GetObservers() : List<IStockObserver>
}

class ProductStockSubject {
    - observers : List<IStockObserver>
    + Attach(observer : IStockObserver) : void
    + Detach(email : string, productId : int) : void
    + Notify(stockEvent : StockChangedEvent) : List<StockNotification>
    + GetObservers() : List<IStockObserver>
}

class StoreController {
    - StockSubject : ProductStockSubject
    - StockNotifications : List<StockNotification>
    + StockAlerts() : IActionResult
    + SubscribeStockAlert(productId : int, customerName : string, email : string) : IActionResult
    + UnsubscribeStockAlert(productId : int, email : string) : IActionResult
    + ClearStockNotifications() : IActionResult
    + UpdateProductStock(id : int, stockQuantity : int) : IActionResult
}

IStockObserver <|.. CustomerStockObserver
IStockSubject <|.. ProductStockSubject

ProductStockSubject o-- IStockObserver : stores observers
ProductStockSubject ..> StockChangedEvent : receives event
ProductStockSubject ..> StockNotification : creates notifications

CustomerStockObserver ..> StockChangedEvent : reads event
CustomerStockObserver ..> StockNotification : returns notification

StoreController ..> IStockSubject : uses subject
StoreController ..> CustomerStockObserver : creates observer
StoreController ..> StockChangedEvent : creates event
StoreController o-- StockNotification : stores generated notifications

@enduml